--- a/clock.css
+++ b/clock.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('clock.jpg');
+    background-image: url('ck1.jpg');
     background-size: cover;
     background-position: center;
   }
