--- a/clock.css
+++ b/clock.css
@@ -7,7 +7,7 @@ body {
   .clock {
     font-size: 3.1em;
     font-family: Arial, sans-serif;
-    color: #333;
+    color: #0a0101;
     text-align: center;
     margin-top: 30vh;
   }
