--- a/clock.css
+++ b/clock.css
@@ -5,7 +5,7 @@ body {
   }
   
   .clock {
-    font-size: 3.1em;
+    font-size: 5rem;
     font-family: Arial, sans-serif;
     color: #0a0101;
     text-align: center;
