--- a/clock.css
+++ b/clock.css
@@ -6,7 +6,7 @@ body {
   
   .clock {
     font-size: 5rem;
-    font-family: Arial, sans-serif;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: #0a0101;
     text-align: center;
     margin-top: 30vh;
