add margin left of clock

--- a/clock.css
+++ b/clock.css
@@ -11,5 +11,7 @@ body {
     text-align: center;
     margin-top: 40vh;
     margin-bottom: 60vh;
+    padding: 0%;
+    margin-left: 40vh;
   }
   
