--- a/clock.css
+++ b/clock.css
@@ -7,7 +7,7 @@ body {
   .clock {
     font-size: 5rem;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    color: #0a0101;
+    color: #020000;
     text-align: center;
     margin-top: 40vh;
     margin-bottom: 60vh;
